fix overflow in retailer login & signup pages

--- a/frontend/src/views/retailer/retailerLogin.css
+++ b/frontend/src/views/retailer/retailerLogin.css
@@ -1,10 +1,7 @@
-video {
-  top: 0%;
-  object-fit: cover;
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  z-index: -2;
+.retailer-login {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 
 .login-container {
